...
                        let webwrapper = webcacheStore.webWrappers[index]
                        LazyVStack(spacing: 0) {
                            ZStack {
                                if showTabPage {
                                    ZStack {
                                        HStack {
                                            TabPageView(webCache: cache, webWrapper: webwrapper,
                                                        isVisible: index == selectedTab.curIndex,
                                                        doneLoading: loadingFinished)
                                                .highPriorityGesture(disabledDragGesture)
                                        }
                                        if addressBar.isFocused{
                                            SearchTypingView()
...
                                } else {
                                    Rectangle().fill(Color.clear)
                                        .highPriorityGesture(disabledDragGesture)
                                }
                            }
                            .frame(height: geometry.size.height - dragScale.addressbarHeight)
                            AddressBar(webCache: cache,
                                       webMonitor: webcacheStore.webWrappers[index].webMonitor,
                                       tabIndex: index,
                                       isVisible: index == selectedTab.curIndex)

                                .background(Color.bkColor)
                                .offset(y: addressbarOffset)
...
